# fusionauth-ignite

./: .gitignore  Cargo.toml  README.md  config.example.kdl
docker/: Dockerfile  docker-compose.yml  fusionauth.example.env
src/: config.rs  main.rs
