[package]
name = "fusionauth-ignite"
version = "0.1.0"
edition = "2021"

[dependencies]
fusionauth-rust-client = { git = "https://github.com/mathiazom/fusionauth-rust-client.git" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
knus = "=3.3.1"
thiserror = "2.0.12"
serde_json = "1.0.140"
